fix: native dark mode

--- a/assets/styles/vars.css
+++ b/assets/styles/vars.css
@@ -33,6 +33,10 @@ body {
 }
 
 @media (prefers-color-scheme: dark) {
+	html {
+		color-scheme: dark;
+	}
+
 	body {
 		--text-color: #eee;
 		--text-color-inv: #222;
